tests/typec-test/test_out/cross-module-item-access.txt
error: expected '\n' | ';' but got '['
 --> cross-module-item-access\root.ctl:8:29
  |
8 | fn third_main -> uint => b\A[uint]\b\pass(b\A\b\pass(0))
  |                             ^ token located here
  |
  = info: grouped items -> list

error: invalid symbol type
 --> cross-module-item-access\root.ctl:8:26
  |
8 | fn third_main -> uint => b\A[uint]\b\pass(b\A\b\pass(0))
  |                          - info: symbol used here
  |
  = info: expected Var but got Module

info: tir repr of functions:
 fn [todo] 2\pass(var0: param 0) -> param 0 return var0

fn [todo] uint\2\pass(var0: uint) -> uint return var0

fn [todo] 2\A\2\pass(var0: uint) -> uint return var0

fn [todo] 0\pass(var0: param 0) -> param 0 return var0

fn [todo] uint\0\pass(var0: uint) -> uint return var0

fn [todo] uint\0\pass_other(var0: uint, var1: param 0) -> param 0 return var1

fn [todo] 0\A\0\pass(var0: param 0) -> param 0 return var0

fn [todo] 1\main() -> uint return 2\pass[uint](uint\2\pass(uint\0\pass(2\A\2\pass(0))))

fn [todo] 1\other_main() -> uint return 2\pass[uint](uint\0\pass_other[uint](0, 0))



